docker/Kubernetes/Services/ClusterIP.yml
---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080  # Exposed port in the cluster
      targetPort: 8080  # Container port
  type: ClusterIP  # Internal within the cluster
